2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2014-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Define TEXLIVE.
	* src/devnag.c: Use binary mode for output files only when
	compiling for TeX Live.

2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/devnag.c: Avoid undefined behaviour when char is signed.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2014-04-21  Karl Berry  <karl@tug.org>

	* Makefile.am (DISTCLEANFILES): use += the second time.

2014-02-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/devnag.c (dnproc): Bug fix: More strcpy() => memmove()
	when src and dest overlap.
	Reported by Richard Koch <koch@math.uoregon.edu>.

2014-02-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/devnag.c (dnproc): Bug fix: Replace strcpy() by memmove()
	when src and dest overlap.
	Reported by Richard Koch <koch@math.uoregon.edu>.

2013-10-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop AC_HEADER_STDC, fail for missing strstr().
	* Makefile.am: Adapted.

2013-03-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/Makefile.am (removed): Merged into Makefile.am.
	* tests/devnag.test (new): Shell script for a test case.
	* tests/*.{dn,tex} (new): Test input and expected output.
	* Makefile.am, configure.ac: Adapted.

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_BASIC to enable silent rules.

2012-05-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/devnag.c: Use binary mode for output files.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp> (W32TeX).

2010-12-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Version 2.15 (since 2008-07-03).

2010-05-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* src/devnag.c: cast arguments in order to avoid compiler warnings.

2009-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid maximal compiler warnings.